Fixed compilation bug in case of tricky control graphs
Ignore-this: 8e0ea80030f8e6576fe2c4c8d07b9881

darcs-hash:20100521151403-41a61-daff64f24331502ef428f9f9b7025e7854c40e2e

--- a/TODO.txt
+++ b/TODO.txt
@@ -18,11 +18,9 @@ Priorities
   properties: pure, ...) to the compiler and get a warning for missing
   primitives
 
-Known bugs
-==========
-- bug when compiling ocamlc
-
-- bug when compiling mutually recursive functions in a loop:
+Known issues
+============
+- mutually recursive functions in a loop are not correctly compiled:
   should build a shared closure
 
 Compiler optimizations
