Fixed bug in flow control + added canvas support
Ignore-this: 59cf0584b4fbea9399d2884bbe32ce21

darcs-hash:20100527154111-41a61-205cfa9b8741574150e75e05be6fdf19a670ad42

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,11 @@
 Priorities
 ==========
 
+- Format.sprintf "%d" is miscompiled (nested loop...)
+
+- should we rely on automatic conversions for float/string/bool?
+  ==> valueOf/toString
+
 - fix control.ml
 
 - finish js API
