--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,27 @@
 Priorities
 ==========
-- exact 32bit multiplication + optimization when one argument is known
-  to be small (< 20 bits)
-- check for division by zero
+- jslib : just need access to global object
+  ===> and true/false/null...  (caml_js_const ...)
+  ===> caml_js_global + caml_js_constant
+  ===> specific file
 
-- add a comment at the beginning of the generated code: produced by
-  ocaml2js...
+- multiplication:
+    optimization when one argument is known to be small (< 20 bits)
+  similarly for div/sub when argument not zero and no overflow
+    (not dividing by -1)
 
-- inline float constants
+- constructor typing :
+    ei : ti
+    c : (t1 -> ... -> tn -> u t) constr
+    -----------------------------------
+         new c (e1, ... en) : u t
+  syntax???
+
+- callbacks, with and without grabbing self
+    'a callback
+
+- add a comment at the beginning of the generated code:
+  produced by ocaml2js...
 
 - reorganize source tree
 - license
@@ -29,13 +43,13 @@ Priorities
 - improved string implementation
   ==> three possible representation : UTF-16 encoding, UTF-8 encoding,
       byte array
-  ==> should not use toString as the default conversion function
-      (toString should escape the string)
 
 - merge all source files (including javascript) into a single file
 - there should be a way to pass a list of know primitives (and their
   properties: pure, ...) to the compiler and get a warning for missing
   primitives
+
+- take examples from http://shootout.alioth.debian.org/?
 
 Known issues
 ============
