--- a/TODO.txt
+++ b/TODO.txt
@@ -1,30 +1,29 @@
 Priorities
 ==========
-- linker: get javascript files from the command line + standard library
-
 - Format.sprintf "%d" is miscompiled (nested loop...)
 
+Runtime
+-------
 - value hash and comparison
+- marshalling
 - md5 computation (cleanup)
 
-- callbacks, with and without grabbing self
-    'a callback
-
-- multiplication:
-    optimization when one argument is known to be small (< 20 bits)
-  similarly for div/sub when argument not zero and no overflow
-    (not dividing by -1)
+Packaging
+---------
+- ocamlfind packages
+- linker: standard library
 
 - add a comment at the beginning of the generated code:
-  produced by ocaml2js...
+  "Compiled from OCaml using ocaml2js 0.1"
 
 - reorganize source tree
-- license
+- licenses
 
-- fix control.ml
-
+Libraries
+---------
 - finish js API
   ===> dom object creation (especially, INPUT)
+  ===> event callbacks
   ===> implement at least an interesting subset of the google closure API
 - should we rely on automatic conversions for float/string/bool?
   ==> does not always work (for instance, strokeStyle method for canvas)
@@ -33,6 +32,8 @@ Priorities
   ==> three possible representation : UTF-16 encoding, UTF-8 encoding,
       byte array
 
+Examples
+--------
 - take examples from http://shootout.alioth.debian.org/?
 
 Known issues
@@ -42,6 +43,13 @@ Known issues
 
 Compiler optimizations
 ======================
+- fix control.ml
+
+- multiplication:
+    optimization when one argument is known to be small (< 20 bits)
+  similarly for div/sub when argument not zero and no overflow
+    (not dividing by -1)
+
 - syntactic sugar for Javascript literal strings
   + optimization to avoid going through Caml strings
 
@@ -215,13 +223,6 @@ COMPRESSION OPTIMIZATION
 
 TYPES
 =====
-
-type 'a nullable
-
-  null : 'a nullable
-  the : 'a -> 'a nullable
-  maybe : 'a nullable -> 'a option
-  (flatten : 'a nullable nullable -> 'a nullable)
 
 Use 32 bit signed integer (following the spec!)
 ===> we do not have enough bits for multiplication :-(
