--- a/TODO.txt
+++ b/TODO.txt
@@ -2,12 +2,16 @@ Priorities
 ==========
 Runtime
 -------
+- improved string implementation
+  ==> three possible representation : UTF-16 encoding, byte string,
+      byte array
+- md5 computation (cleanup)
 - value hash and comparison
 - marshalling
-- md5 computation (cleanup)
-- improved string implementation
-  ==> three possible representation : UTF-16 encoding, UTF-8 encoding,
-      byte array
+- caml_int64_of_string/caml_int_of_string
+
+- caml_lex_engine/caml_new_lex_engine
+- caml_parse_engine/caml_set_parser_trace
 
 Packaging
 ---------
