MD5 computation: clean-up
Ignore-this: e21ac9a288ad6676400a7aa900525074

darcs-hash:20100608091755-41a61-d80ad8d50b814cce565e806a6182b39e772f9254

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,6 @@ Priorities
 ==========
 Runtime                                                  <======
 -------
-- md5 computation (cleanup)
 - value hash and comparison
 - marshalling
 - caml_int64_of_string
@@ -37,6 +36,8 @@ Benchmarks/examples
 ===================
 - take examples from http://shootout.alioth.debian.org/?
 - planets (+satellites?) ===> Runge-Kutta
+- 3D effects: http://gyu.que.jp/jscloth/
+              http://stackoverflow.com/questions/1584854/how-to-draw-3d-sphere
 
 Design notes
 ============
