--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,8 @@ Documentation
 ==> what is supported
     ==> standard library, but not channels, lexing, parsing
 ==> what differs: marshalling, comparison, hashing
+    ==> different data representation
+    ==> stack overflow
 
 Runtime                                                  <======
 -------
