--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,9 @@
 Priorities
 ==========
+Compiler
+--------
+- '-include' option: include whole file
+
 Documentation
 -------------
 ==> what is supported
@@ -9,10 +13,6 @@ Documentation
     ==> stack overflow
 ==> Performance tips: make computations using float; conversion to and
     from int is cheap; int multiplication and division can be slow
-
-Runtime                                                  <======
--------
-- value comparison
 
 Libraries
 ---------
@@ -39,8 +39,6 @@ Packaging
 - add a comment at the beginning of the generated code:
   "Compiled from OCaml using ocaml2js 0.1"
 
-- reorganize source tree
-  ==> move compiler to a subtree
 - licenses
 
 Benchmarks/examples
