--- a/TODO.txt
+++ b/TODO.txt
@@ -2,16 +2,11 @@ Priorities
 ==========
 Documentation
 -------------
-==> what is supported
-    ==> standard library, but not channels, lexing, parsing
-==> what differs: marshalling, comparison, hashing
-    ==> different data representation
-    ==> stack overflow
-==> Performance tips: make computations using float; conversion to and
-    from int is cheap; int multiplication and division can be slow
+- js library (mostly, syntax extension)                  <=====
 
 Libraries
 ---------
+- lexing/parsing
 - finish js API
   ===> event callbacks                                   <======
        ==> how can we invoke a previous callback?
