Fixed code generation bug
Ignore-this: f3af0e10420a52ef56bd9385dc516c61

darcs-hash:20100612223931-41a61-b3db0f449399b2b5c0e1ff3322b04ddd1c465b9d

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,12 @@ Priorities
 ==========
 What name for the library?
 
+Examples
+--------
+- check canvas availability
+- polishing
+- catch error in planet when loading from file
+
 Documentation
 -------------
 - js library (mostly, syntax extension)                  <=====
