Function call API in Js library
Ignore-this: c13c12b419f8c465579428aa5107fcaf

darcs-hash:20100614210004-41a61-e2f5c115bca30fa460e14a4110e6a8ba23db8bfc

--- a/README
+++ b/README
@@ -38,9 +38,9 @@ Usage
 Features
 --------
 The whole OCaml standard library should be supported, except for
-input/ouput channels, weak references, and a few functions from the
-Sys module.  Extra libraries such as Bigarray, Unix, Thread or Str are
-not supported.
+input/ouput channels, weak references, and most functions of the
+Sys module.  Extra libraries such as Bigarray, Unix, Thread or Str
+are not supported.
 
 Tail call is not optimized in general.  However, self recursive
 functions (when the tail calls are to the function itself) are
