--- a/README
+++ b/README
@@ -1,42 +1,43 @@
-Overview
---------
-This program compiles OCaml bytecode programs to Javascript.  We hope
-that this option will prove easier to use and to maintain than a
-retargeted OCaml compiler.  In particular, the user does not have to
+=== Overview ===
+
+Js_of_ocaml is a compiler from OCaml bytecode programs to Javascript.
+We hope that this option will prove easier to use and to maintain than
+a retargeted OCaml compiler.  In particular, the user does not have to
 perform a distinct installation of OCaml with a specific compiler and
 specially compiled libraries.  For instance, he can use an already
-installed instance of the Lwt library.  Of course, the drawback is that
-we have less freedom in mapping smoothly OCaml to Javascript and
+installed instance of the Lwt library.  Of course, the drawback is
+that we have less freedom in mapping smoothly OCaml to Javascript and
 optimizating the generated code.  For instance, OCaml booleans and
 objects cannot be mapped to Javascript booleans and objects.
 
-Requirements
-------------
-  * findlib
-  * Lwt (version 2.1 at least)
+=== Requirements ===
 
-Installation
-------------
-  * run "make" to compile everything
-  * run "make install" as root to install the compiler
+  * Findlib
+  * Lwt (**version 2.1** at least)
+
+=== Installation ===
+  * run {{{make}}} to compile everything
+  * run {{{make install}}} as root to install the compiler
     and its libraries
-  * run "make uninstall" as root to uninstall them
+  * run {{{make uninstall}}} as root to uninstall them
 
-Usage
------
+=== Usage ===
+
   Your program must first be compiled using the OCaml bytecode
-  compiler 'ocamlc'.  Javascript bindings, as well as a corresponding
-  syntax extension, are provided by the 'js_of_ocaml' package.
-
+  compiler {{{ocamlc}}}.  Javascript bindings, as well as a
+  corresponding syntax extension, are provided by the
+  {{{js_of_ocaml}}} package.
+{{{
       ocamlfind ocamlc -package js_of_ocaml -syntax camlp4o -linkpkg \
           -o cubes.byte cubes.ml
-
-  Then, run the 'js_of_ocaml' compiler to produce Javascript code:
-
+}}}
+  Then, run the {{{js_of_ocaml}}} compiler to produce Javascript code:
+{{{
       js_of_ocaml cubes.byte
+}}}
 
-Features
---------
+=== Features ===
+
 The whole OCaml standard library should be supported, except for
 input/ouput channels, weak references, and most functions of the
 Sys module.  Extra libraries such as Bigarray, Unix, Thread or Str
@@ -51,10 +52,10 @@ reasons.  Most notably, integers are 32 bits (rather than 31 bits or
 63 bits) and float are not boxed.  As a consequence, marshalling,
 polymorphic comparison, and hashing functions can yield results
 different from usual:
-  - marshalling of floats is not supported (unmarshalling works);
-  - the polymorphic hash function will not give the same results on
+  * marshalling of floats is not supported (unmarshalling works);
+  * the polymorphic hash function will not give the same results on
     datastructures containing floats;
-  - these functions may be more prone to stack overflow, as the
+  * these functions may be more prone to stack overflow, as the
     Javascript stack is small.
 
 For best performance, computations should be made using floats rather
@@ -62,11 +63,11 @@ than integers, as this is the native number format in Javascript.
 Conversion from integer to float and back is cheap.  Accurate 32 bit
 integer multiplication is slow.
 
-Contents
---------
-    LICENSE       license and copyright notice
-    README        this file
-    compiler/     compiler
-    examples/     small examples
-    lib/          library for interfacing with Javascript APIs
-    runtime/      runtime system
+=== Contents of the distribution ===
+
+|    LICENSE     |   license and copyright notice                   |
+|    README      |   this file                                      |
+|    compiler/   |   compiler                                       |
+|    examples/   |   small examples                                 |
+|    lib/        |   library for interfacing with Javascript APIs   |
+|    runtime/    |   runtime system                                 |
