--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 === Overview ===
 
-Js_of_ocaml is a compiler from OCaml bytecode programs to Javascript.
-We hope that this option will prove easier to use and to maintain than
-a retargeted OCaml compiler.  In particular, the user does not have to
-perform a distinct installation of OCaml with a specific compiler and
-specially compiled libraries.  For instance, he can use an already
-installed instance of the Lwt library.  Of course, the drawback is
-that we have less freedom in mapping smoothly OCaml to Javascript and
-optimizating the generated code.  For instance, OCaml booleans and
-objects cannot be mapped to Javascript booleans and objects.
+Js_of_ocaml is a compiler from OCaml bytecode to Javascript.  It makes
+it possible to write OCaml programs that run on Web browsers.  It is
+easy to install as it works with an existing installation of OCaml,
+with no need to recompile any library.  It comes with bindings for a
+large part of the browser APIs.  According to our benchmarks, the
+generated programs runs typically faster than with the OCaml bytecode
+interpreter.  We believe this compiler will prove much easier to
+maintain than a retargeted OCaml compiler, as the bytecode provides a
+very stable API.
 
 === Requirements ===
 
@@ -23,15 +23,17 @@ objects cannot be mapped to Javascript booleans and objects.
 
 === Usage ===
 
-  Your program must first be compiled using the OCaml bytecode
-  compiler {{{ocamlc}}}.  Javascript bindings, as well as a
-  corresponding syntax extension, are provided by the
-  {{{js_of_ocaml}}} package.
+Your program must first be compiled using the OCaml bytecode compiler
+{{{ocamlc}}}.  Javascript bindings, as well as a corresponding syntax
+extension, are provided by the {{{js_of_ocaml}}} package.
+
 {{{
       ocamlfind ocamlc -package js_of_ocaml -syntax camlp4o -linkpkg \
           -o cubes.byte cubes.ml
 }}}
-  Then, run the {{{js_of_ocaml}}} compiler to produce Javascript code:
+
+Then, run the {{{js_of_ocaml}}} compiler to produce Javascript code:
+
 {{{
       js_of_ocaml cubes.byte
 }}}
@@ -47,9 +49,11 @@ Tail call is not optimized in general.  However, self recursive
 functions (when the tail calls are to the function itself) are
 compiled using a loop.
 
+Recursive modules are not supported at the moment.
+
 Data representation differs from the usual one, for performance
 reasons.  Most notably, integers are 32 bits (rather than 31 bits or
-63 bits) and float are not boxed.  As a consequence, marshalling,
+63 bits) and floats are not boxed.  As a consequence, marshalling,
 polymorphic comparison, and hashing functions can yield results
 different from usual:
   * marshalling of floats is not supported (unmarshalling works);
@@ -57,11 +61,6 @@ different from usual:
     datastructures containing floats;
   * these functions may be more prone to stack overflow, as the
     Javascript stack is small.
-
-For best performance, computations should be made using floats rather
-than integers, as this is the native number format in Javascript.
-Conversion from integer to float and back is cheap.  Accurate 32 bit
-integer multiplication is slow.
 
 === Contents of the distribution ===
 
