--- a/doc/src/js_of_ocaml1.wiki
+++ b/doc/src/js_of_ocaml1.wiki
@@ -2,8 +2,8 @@
 
 Js_of_ocaml is a compiler of OCaml bytecode to Javascript.  It makes it possible to run Ocaml programs in a Web browser.  Its key features are the following:
 * The whole language, and most of the standard library are supported.
-* The compiler is easy to install: it only depends on [[http://projects.camlcity.org/projects/findlib.html|Findlib]] and [[/lwt|Lwt]].
-* The generated code is independant of [[/eliom|Eliom]] and the [[/ocsigenserver|Ocsigen server]]. You can use it with any Web server. 
+* The compiler is easy to install: it only depends on [[http://projects.camlcity.org/projects/findlib.html|Findlib]] and [[wiki(21):|Lwt]].
+* The generated code is independant of [[wiki(15):|Eliom]] and the [[wiki(12):|Ocsigen server]]. You can use it with any Web server. 
 * You can use a standard installation of OCaml to compile your programs.  In particular, you do not have to recompile a library to use it with Js_of_ocaml.
 You just have to link your program with a specific library to interface with the browser APIs.
 
