--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+===== 1.0.1 (2011-01-26) =====
+
+ * Bugfixes:
+   ** conversion of Int64 to string.
+   ** typos.
+ * Allow use of Lwt.pause.
+ * Split ocamlfind packages in two: syntax and library.
+
 ===== 1.0 (2010-12-13) =====
 
 Initial release
