Fix to last commit
Ignore-this: 79d6de77df5a5f61df01d53c4e3bd524

darcs-hash:20110401225241-c8b6b-850cd3eaed5f9e3f498e719f1b2f4a5ef9270227

--- a/doc/src/js_of_ocaml1.wiki
+++ b/doc/src/js_of_ocaml1.wiki
@@ -8,7 +8,7 @@ Js_of_ocaml is a compiler of OCaml bytecode to Javascript.  It makes it possible
 You just have to link your program with a specific library to interface with the browser APIs.
 
 A few small demos are available on-line:
-* [[toplevel|An OCaml toplevel running in the browser]
+* [[toplevel|An OCaml toplevel running in the browser]]
 * [[planet|An animated 3D view of the Earth]]
 * [[graph|A graph viewer]]
 * [[boulderdash|A Boulder Dash game]]
