README: added instructions to build the toplevel
Ignore-this: 3e76f27bee8756b415206db07d3b52c3

darcs-hash:20110404113942-c8b6b-e6b551e7e61972d3f94ee707859ae1960c8aeb72

--- a/README
+++ b/README
@@ -16,10 +16,13 @@ very stable API.
   * Lwt (**version 2.2.1** at least)
 
 === Installation ===
-  * run {{{make}}} to compile everything
+  * run {{{make}}} to compile
   * run {{{make install}}} as root to install the compiler
     and its libraries
   * run {{{make uninstall}}} as root to uninstall them
+
+You can run {{{make toplevel}}} if you want to build a Web-based OCaml
+toplevel as well.
 
 === Usage ===
 
