Update the README to mention the js_of_ocaml.syntax package
Ignore-this: a15fbf51def37238c3b6fe88d3610be9

darcs-hash:20110405090402-c8b6b-b40492994974905682f4851bf1b04930fbbce236

--- a/README
+++ b/README
@@ -31,8 +31,8 @@ Your program must first be compiled using the OCaml bytecode compiler
 extension, are provided by the {{{js_of_ocaml}}} package.
 
 {{{
-      ocamlfind ocamlc -package js_of_ocaml -syntax camlp4o -linkpkg \
-          -o cubes.byte cubes.ml
+      ocamlfind ocamlc -package js_of_ocaml,js_of_ocaml.syntax \
+          -syntax camlp4o -linkpkg -o cubes.byte cubes.ml
 }}}
 
 Then, run the {{{js_of_ocaml}}} compiler to produce Javascript code:
