--- a/README
+++ b/README
@@ -15,6 +15,9 @@ very stable API.
   * Findlib
   * Lwt (**version 2.2.1** at least)
 
+  [optionnal]
+  * deriving-ocsigen (see: https://github.com/hnrgrgr/deriving)
+
 === Installation ===
   * run {{{make}}} to compile
   * run {{{make install}}} as root to install the compiler
